# RandomX

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  file.txt  makefile  randomx.sln
.github/workflows/: c-cpp.yml
doc/: configuration.md  dataset.md  design.md  design_v2.md  isa-ops.md  isa.md  program.asm  specs.md  tevador.asc  vm.md
python/: crandomx.pxd  randomx.pyx  setup.py
src/: AddressTransform.cpp  AssemblyGeneratorX86.cpp  AssemblyGeneratorX86.hpp  Blake2Generator.cpp  Blake2Generator.hpp  Cache.cpp  Cache.hpp  CompiledLightVirtualMachine.cpp  CompiledLightVirtualMachine.hpp  CompiledVirtualMachine.cpp  CompiledVirtualMachine.hpp  Instruction.cpp  Instruction.hpp  InterpretedLightVirtualMachine.cpp  InterpretedLightVirtualMachine.hpp  InterpretedVirtualMachine.cpp  InterpretedVirtualMachine.hpp  JitCompilerX86-static.S  JitCompilerX86-static.asm  JitCompilerX86-static.hpp  JitCompilerX86.cpp  JitCompilerX86.hpp  LightClientAsyncWorker.cpp  LightClientAsyncWorker.hpp  LightProgramGenerator.cpp  LightProgramGenerator.hpp  Pcg32.hpp  Program.cpp  Program.hpp  Stopwatch.hpp  TestAluFpu.cpp  VirtualMachine.cpp  VirtualMachine.hpp  aes_hash.cpp  aes_hash.hpp  aes_hash_rv64_vector.cpp  affinity.cpp  allocator.cpp  allocator.hpp  argon2.h  (+96 more)
src/asm/: configuration.asm  initBlock.inc  program_epilogue_linux.inc  program_epilogue_store.inc  program_epilogue_win64.inc  program_load_flt.inc  program_load_int.inc  program_loop_load.inc  program_loop_store.inc  program_loop_store_hard_aes.inc  program_loop_store_soft_aes.inc  program_prologue_linux.inc  program_prologue_load.inc  program_prologue_win64.inc  program_read.inc  program_read_dataset.inc  program_read_dataset_light.inc  program_read_dataset_light_sub.inc  program_read_dataset_sshash_fin.inc  program_read_dataset_sshash_init.inc  program_read_dataset_sshash_init_v2.inc  program_read_dataset_v2.inc  program_read_f.inc  program_read_r.inc  program_soft_aes_dec.inc  program_soft_aes_enc.inc  program_sshash_constants.inc  program_sshash_load.inc  program_sshash_prefetch.inc  program_store_flt.inc  program_store_int.inc  program_transform_address.inc  program_xmm_constants.inc  squareHash.inc
src/blake2/: blake2-impl.h  blake2.h  blake2b.c  blamka-round-avx2.h  blamka-round-ref.h  blamka-round-sse3.h  blamka-round-ssse3.h  endian.h
src/t1ha/: t1ha.h  t1ha2.c  t1ha_bits.h
src/tests/: affinity.cpp  affinity.hpp  api-example1.c  api-example2.cpp  api-example3.cpp  benchmark.cpp  code-generator.cpp  perf-simulation.cpp  stopwatch.hpp  superscalar-avalanche.cpp  superscalar-init.cpp  superscalar-stats.cpp  tests.cpp  utility.hpp
tests/: rx2c.py  small-prog.asm
tests/branch_prediction/: branch_always.c  branch_mixed.c  branch_predictably.c  branch_randomly.c  makefile  prof.h
tests/performance/: benchmark.cpp  test1.data  test2.data
tests/test_alu_fpu/: Instructions.h  InstructionsPortable.cpp  InstructionsX64.asm  TestAluFpu.cpp  makefile
vcxproj/: api-example1.vcxproj  api-example2.vcxproj  benchmark.vcxproj  benchmark.vcxproj.filters  code-generator.vcxproj  jit-performance.vcxproj  perf-simulation.vcxproj  randomx-dll.vcxproj  randomx-dll.vcxproj.filters  randomx.vcxproj  randomx.vcxproj.filters  runtime-distr.vcxproj  scratchpad-entropy.vcxproj  superscalar-avalanche.vcxproj  superscalar-avalanche.vcxproj.filters  superscalar-init.vcxproj  superscalar-init.vcxproj.filters  superscalar-stats.vcxproj  superscalar-stats.vcxproj.filters  tests.vcxproj  tests.vcxproj.filters
